# kaspa_audio_transfer

./: .gitignore  Cargo.toml  README  README.md
.github/workflows/: release-cli.yml  release-desktop.yml  release-mobile.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  wallet_kaspa.rs  wallet_vault.rs
desktop/ui/: app.js  index.html  styles.css
docs/: dev_fund_proposal_250k_kas.md  web_backend_rust_design.md
mobile/app/: README.md
mobile/app/src-tauri/: Cargo.toml  tauri.conf.json
mobile/app/src-tauri/.cargo/: config.toml
mobile/app/src-tauri/icons/: icon.icns
mobile/app/src-tauri/src/: lib.rs  main.rs  wallet_kaspa.rs  wallet_vault.rs
mobile/ui/: app_mobile.js  index.html  styles.css
src/: audio.rs  cli.rs  error.rs  kaspa.rs  lib.rs  main.rs  wallet_vault.rs
src/kaspa/: estimate.rs  kat.rs  mod.rs  receive.rs  rest.rs  send.rs  tx_hash.rs  wallet.rs
wasm/: Cargo.toml
web/: README.md
web/backend/: Cargo.toml
web/backend/src/: config.rs  jobs.rs  main.rs  process.rs  routes.rs
web/frontend/: app.js  index.html  style.css  style.css.backup
