# Audio transfer tool

[package]
name = "kaspa_audio_transfer"
version = "0.1.0"
edition = "2021"
description = "A tool to send and receive files over the Kaspa network"

[dependencies]
# Audio processing
rodio = "0.17"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Kaspa dependencies
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }

# Async runtime
tokio = { version = "1.33.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
futures = "0.3"

# Transaction building/signing
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }

[patch.crates-io]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "fcd9c28f9b211b9872a0c90a8c94f79466ffb063" }