[package]
name = "kaspa_audio_transfer_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "clipboard-write-text", "clipboard-read-text", "dialog-all", "fs-all", "path-all", "shell-open", "clipboard"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
serde_json = "1.0"
borsh = { version = "1.5", features = ["derive"] }
zeroize = { version = "1.6", features = ["derive"] }
tokio = { version = "1.33.0", features = ["time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
qrcode = { version = "0.11", default-features = false, features = ["svg"] }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }

[patch.crates-io]
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
